# PyDBML

./: LICENSE  MANIFEST.in  README.md  pydbml.code-workspace  pyproject.toml  run_repl.py  setup.py  test_plugin.py
doc/: index.md  index_old.md
doc/advanced/: ast_specification.md  contributing.md  debugger.md  plugin_system.md
doc/examples/: basic.md  example10_handle.pydbml  example11_scope.pydbml  example12_index_error.pydbml  example13_method_not_found.pydbml  example14_nested_calls.pydbml  example15_complex.pydbml  example16_file_write.pydbml  example17_file_read.pydbml  example18_json_usage.pydbml  example19_case_insensitive_methods.pydbml  example1_nested_loops.pydbml  example20_object_python_mix.pydbml  example21_method_chaining.pydbml  example22_handle_specific_error.pydbml  example23_import_module_usage.pydbml  example24_plugin_class.pydbml  example2_factorial.pydbml  example3_if.pydbml  example4_short_circuit.pydbml  example5_array.pydbml  example6_values_loop.pydbml  example7_skip.pydbml  example8_break.pydbml  example9_method.pydbml
doc/runtime/: environment.md  evaluator.md  modules.md  security.md
doc/semantics/: error_system.md  evaluation.md  execution_model.md
doc/syntax/: control_flow.md  expressions.md  functions.md  grammar.md  statements.md
doc/types/: core_types.md  object_system.md  type_system.md
pydbml-lsp/: server.py
pydbml-vscode/: extension.js  package-lock.json  package.json  test.pdfnc
scripts/: Collection.py  deletePyCache.py
src/pydbml/: plugins.py
tests/: test_example.py  test_operator_and_decorators_full.py
tests/ast/: test_array_index.py  test_dot.py
tests/builtins/: test_undefined.py  test_unset.py
tests/command/: test_command_var.py
tests/core/: test_engine.py
tests/debug_tests/: test_conditional_breakpoints.py  test_debug_watch.py  test_debugger_non_interactive.py  test_debugger_state_snapshot.py  test_step_over.py  ttest_breakpoint.py  ttest_debugger_full.py  ttest_step.py  ttest_step_over.py  ttest_trace.py
(+113 files in other folders)
